Fixed search and context menu